Bug 690738 - pdfwriter garbles/omits glyphs
Summary: pdfwriter garbles/omits glyphs
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: PC Linux
: P2 normal
Assignee: Ken Sharp
URL:
Keywords:
: 690836 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-28 10:09 UTC by keinbiervorvier
Modified: 2009-11-21 01:48 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
f1.eps (38.31 KB, application/postscript)
2009-08-28 10:11 UTC, keinbiervorvier
Details
f2.eps (45.28 KB, application/postscript)
2009-08-28 10:11 UTC, keinbiervorvier
Details
test.eps (10.19 KB, application/postscript)
2009-11-14 19:06 UTC, keinbiervorvier
Details

Note You need to log in before you can comment on or make changes to this bug.
Description keinbiervorvier 2009-08-28 10:09:51 UTC
Hi,

when converting the attached eps files with ps2pdf from current svn HEAD the
figure labels in the resulting pdf files are garbled and incomplete without any
error indication from gs.

The eps figures display fine with gs (HEAD) on X11/linux. This problem occurs on
various linux platforms.

The same figures convert ok with gs 8.63

Cheers
T.
Comment 1 keinbiervorvier 2009-08-28 10:11:22 UTC
Created attachment 5345 [details]
f1.eps
Comment 2 keinbiervorvier 2009-08-28 10:11:48 UTC
Created attachment 5346 [details]
f2.eps
Comment 3 keinbiervorvier 2009-08-28 11:12:09 UTC
I performed a bisection on svn revisions and pinpointed the problem to update
9804 

revision <= 9803: ps2pdf f1.eps; gs f1.pdf => OK
revision >= 9804: ps2pdf f1.eps; gs f1.pdf => missing glyphs in label


Author: ken
Date: 2009-06-19 05:14:20 -0700 (Fri, 19 Jun 2009)
New Revision: 9804

Modified:
   trunk/gs/base/gdevpdfb.c
   trunk/gs/base/gdevpdfx.h
   trunk/gs/base/gdevpdt.h
   trunk/gs/base/gdevpdti.c
   trunk/gs/base/gdevpdti.h
   trunk/gs/base/gdevpdts.c
Log:
Fix (pdfwrite) : Make type 3 bitmap font text-searchable if possible


hope this helps
T.
Comment 4 Ken Sharp 2009-08-29 02:19:00 UTC
Thanks for the investigation, it'll certainly help !
Comment 5 Ken Sharp 2009-11-03 00:57:56 UTC
*** Bug 690836 has been marked as a duplicate of this bug. ***
Comment 6 Ken Sharp 2009-11-03 01:20:07 UTC
Increased priority for a regression, plus we have three reports (all using
matplotlib files I think)
Comment 7 keinbiervorvier 2009-11-14 19:00:47 UTC
indeed all 3 duplicate bug reports are with matplotlib generated figures. I
attach a minimal figure which exhibits the problem and add the observation that
the omitted glyphs are influenced by the order of appearance inside the ps file.

the attached eps file simply displays "greek symbol lambda"" with subscript
"rest". the postscript displays fine, but the pdf generated via ps2pdf is
missing the letters "st"

I note that moving the statements which show lambda inside the eps file affects
what part of the subscript is shown in the generated pdf while the postscript
display is identical.

try the following edit to the attached eps file and compare the pdf display

# diff -u test1.eps test.eps
--- test1.eps   2009-11-14 19:54:11.000000000 -0700
+++ test.eps    2009-11-14 19:53:46.000000000 -0700
@@ -447,15 +447,15 @@
 17.0 scalefont
 setfont

-0.000000 5.203125 moveto
-/lambda glyphshow
-
 9.911133 0.866531 moveto
 /r glyphshow

 15.280078 0.866531 moveto
 /e glyphshow

+0.000000 5.203125 moveto
+/lambda glyphshow
+
 20.811719 0.866531 moveto
 /s glyphshow


Cheers
T.

Comment 8 keinbiervorvier 2009-11-14 19:06:50 UTC
Created attachment 5671 [details]
test.eps

minimal eps file which exhibits the pdfwriter bug with glyph omission for
matplotlib generated figures
Comment 9 Ken Sharp 2009-11-21 01:48:46 UTC
Fixed in revision 10365, patch here:

http://ghostscript.com/pipermail/gs-cvs/2009-November/010092.html