Fix (pdfwrite) : problems with type 3 fonts and glyphshow

Details
Bug #690738 "pdfwriter garbles/omits glyphs"
Bug #690836 "Bug during eps to pdf conversion"
Bug #690882 "ps2pdf mangles type 3 fonts"

Revision 9804 modified pdfwrite to try and make text in type 3 bitmap fonts, derived
from PCL input, more likely to produce a PDF file with searchable text. Part of the
change was to try and group multiple glyphs together into a single string instead of
emitting them as single glyphs.

Unfortunately that was an optimisation too far. There is no way currently to tell the
difference between a type 3 font which has been converted into a bitmap, one which
started as a bitmap, and one where the CharProc has been captured (PostScript). We do
however store bitmap and outline glyphs in different fonts, the problem arose if we
converted a CharProc to a bitmap, and then stored a CharProc, the code did not realise
that we had switched fonts and tried to use the bitmap font for both.

This occurs because matplotlib defines all its fonts as type 3, applies an Encoding
to them, but never uses it, instead showing all glyphs with a glyphshow operation.
This makes it difficult for pdfwrite to assemble an output type 3 font with a valid
Encoding, and PDF doesn't support glyphshow. In this case if we find that the glyphshow
uses a glyph which is not in the font's Encoding (eg /multiply) we end up producing a
bitmapped glyph instead.

Ideally we would capture the CharProc, but doing so would be very difficult in this case
for a very minor benefit. Instead I've chosen to remove this optimisation.

Previously we would emit text something like:

x y moveto
(ABC) show

Now we do:

x y moveto
(A) show
x1 y1 moveto
(B) show
x2 y2 moveto
(C) show

There seem to be no differences in the test suite with PostScript and PDF files,
probably because no files apart from matplotlib use glyphshow in this demented fashion.
However, this does result in a large number of PCL test files exhibiting very small
differences with text, especially at low resolution, due to tiny shifts in position.

Expected Differences
(When converted to PDF and then rendered)

"j:\tests\pcl\1.pcl"
"j:\tests\pcl\1271lj4p.bin"
"j:\tests\pcl\14-01.BIN"
"j:\tests\pcl\16-09.BIN"
"j:\tests\pcl\16-10.BIN"
"j:\tests\pcl\16-11.BIN"
"j:\tests\pcl\18-05.BIN"
"j:\tests\pcl\18-10.BIN"
"j:\tests\pcl\18-12.BIN"
"j:\tests\pcl\18-15.BIN"
"j:\tests\pcl\18-20.BIN"
"j:\tests\pcl\19-02.BIN"
"j:\tests\pcl\19-03.BIN"
"j:\tests\pcl\19-04.BIN"
"j:\tests\pcl\19-08.BIN"
"j:\tests\pcl\19-09.BIN"
"j:\tests\pcl\19-10.BIN"
"j:\tests\pcl\19-11.BIN"
"j:\tests\pcl\19-12.BIN"
"j:\tests\pcl\21-06.BIN"
"j:\tests\pcl\22-08.BIN"
"j:\tests\pcl\30-19.BIN"
"j:\tests\pcl\30-20.BIN"
"j:\tests\pcl\31-03.BIN"
"j:\tests\pcl\3656.bin"
"j:\tests\pcl\ac216w22.bin"
"j:\tests\pcl\ac219w22.bin"
"j:\tests\pcl\ap306dwo.pcl"
"j:\tests\pcl\BA301SA1.BIN"
"j:\tests\pcl\clj4550fonts-4600drv-pcl.prn"
"j:\tests\pcl\fm301af.pcl"
"j:\tests\pcl\fm301awe.pcl"
"j:\tests\pcl\fm305dwe.pcl"
"j:\tests\pcl\fm307dwe.pcl"
"j:\tests\pcl\foo.pxl"
"j:\tests\pcl\fts.0280"
"j:\tests\pcl\fts.0290"
"j:\tests\pcl\fts.0320"
"j:\tests\pcl\fts.0330"
"j:\tests\pcl\fts.0341"
"j:\tests\pcl\fts.0351"
"j:\tests\pcl\fts.0380"
"j:\tests\pcl\fts.0390"
"j:\tests\pcl\fts.0411"
"j:\tests\pcl\fts.0450"
"j:\tests\pcl\fts.0463"
"j:\tests\pcl\fts.0481"
"j:\tests\pcl\fts.0500"
"j:\tests\pcl\fts.0530"
"j:\tests\pcl\fts.0543"
"j:\tests\pcl\fts.0560"
"j:\tests\pcl\fts.0573"
"j:\tests\pcl\fts.0602"
"j:\tests\pcl\fts.0621"
"j:\tests\pcl\fts.1271"
"j:\tests\pcl\fts.1601"
"j:\tests\pcl\fts.2300"
"j:\tests\pcl\fts.2500"
"j:\tests\pcl\fw21fww3.bin"
"j:\tests\pcl\gw95cw22.bin"
"j:\tests\pcl\ingtest.pcl"
"j:\tests\pcl\invoice2pg.pcl"
"j:\tests\pcl\jagged_lines.pcl"
"j:\tests\pcl\lt341ddn.pcl"
"j:\tests\pcl\lt342ddn.pcl"
"j:\tests\pcl\lt348ddn.pcl"
"j:\tests\pcl\lt349ddn.pcl"
"j:\tests\pcl\lt34addn.pcl"
"j:\tests\pcl\lt34bddn.pcl"
"j:\tests\pcl\lt34cddn.pcl"
"j:\tests\pcl\lt96dw23.bin"
"j:\tests\pcl\mc505ww1.bin"
"j:\tests\pcl\mc508ww2.bin"
"j:\tests\pcl\md311dwf.pcl"
"j:\tests\pcl\mpe.pcl"
"j:\tests\pcl\pdf1pag.pcl"
"j:\tests\pcl\pdpB.pcl"
"j:\tests\pcl\pdpc.pcl"
"j:\tests\pcl\pl30aw22.bin"
"j:\tests\pcl\pl30ew23.bin"
"j:\tests\pcl\Po30bww2.bin"
"j:\tests\pcl\Qp60cww3.bin"
"j:\tests\pcl\sestest.prn"
"j:\tests\pcl\small.pcl"
"j:\tests\pcl\TAULFCE.pcl"
"j:\tests\pcl\tc921awh.pcl"
"j:\tests\pcl\tcd21adh.pcl"
"j:\tests\pcl\test2.pcl"
"j:\tests\pcl\text1.pcl"
"j:\tests\pcl\UN058415.PCL"
"j:\tests\pcl\wd30bdwf.pcl"

There may be others.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10365 a1074d23-0009-0410-80fe-cf8c14f379e6